tests/integration/snapshots/main__integration__err__error_unexpected_positional_arg.snap
---
source: tests/integration/err.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: unexpected argument: unexpected
   ╭─[ <cli>:1:1 ]
   │
 1 │ unexpected --name value
   │ ─────┬────  
   │      ╰────── unexpected argument: unexpected
───╯
